css/index.css
@import url(http://fonts.googleapis.com/css?family=Arvo|Ubuntu);

body#homepage {
  margin: 0;
  padding: 0;
  font-size: 16px;
}

#homepage .container {
  max-width: 960px;
  min-width: 320px;
  display: block;
  margin: 1em auto;
  position: relative;
  min-height: 100%;
}

#homepage #left-box {
  position: fixed;
  width: 250px;
  float: left;
  background-color: white;
  margin-right: 1em;
}

#homepage #left-box #my-name {
  font-size: 3em;
  font-family: "Arvo", sans-serif;
  margin-bottom: 0;
}

#homepage #left-box #my-title {
  margin-top: 0;
  font-size: 1.25em;
  font-family: "Ubuntu", sans-serif;
  line-height: 1.5;
}

#homepage #left-box #my-title a {
  cursor: pointer;
  border-bottom: 1px solid black;
  padding-bottom: 0.05em;
  text-decoration: none;
}

#homepage #programmer-button, #homepage #journalist-button {
  cursor: pointer;
  border-bottom: 1px solid black;
  padding-bottom: 0.05em;
}

#homepage #left-box nav ul {
  margin: 0;
  padding: 0;
}

#homepage a:link, #homepage a:visited, #homepage a:hover, #homepage a:active {
  text-decoration: none;
  color: black;
}

#homepage a:hover {
  text-decoration: underline;
}

#homepage #left-box nav ul li {
  font-size: 2em;
  font-family: "Ubuntu", sans-serif;
  line-height: 1.5;
  margin: 0;
  list-style-type: none;
}

#homepage #right-box {
  position: relative;
  float: right;
  width: 576px;
  height: auto;
  padding: 1em;
  background-color: white;
  overflow: auto;
}

#homepage #right-box #item-box {
  width: 100%;
}

#homepage #right-box #written-work {
  width: 100%;
}

#homepage #right-box h2 {
  margin-top: 1.5em;
  font-family: "Arvo", sans-serif;
}

#homepage #right-box #written-work p {
  font-family: "Ubuntu", sans-serif;
  font-size: 1.15em;
  line-height: 1.5;
}

#homepage #right-box #written-work #more-stories {
  text-decoration: underline;
}

#homepage .item {
  position: relative;
  display: inline-block;
  top: 0;
  left: 0;
  width: 250px;
  height: 250px;
  margin: 1em 2em 3em 0em;
}

#homepage .item img {
  position: absolute;
  width: 100%;
  height: 80%;
  top: 4.75em;
}

#homepage .item .item-desc {
  position: absolute;
  width: 100%;
  top: 0;
  font-family: "Ubuntu", sans-serif;
}

#homepage .item .item-desc:nth-child(1) {
  font-size: 1.25em;
  font-family: "Arvo", sans-serif;
}

#homepage .item .item-desc:nth-child(2) {
  margin-top: 1.75em;
}

#homepage .clear { clear: both; }

.itemTitle a {
  text-decoration:none;
  margin-top: 2em;
  font-family: "Arvo", sans-serif;
  font-size: 1.5em;
  font-weight: bold;
}

.itemDate {
  font-family: "Ubuntu", sans-serif;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}

.feedEkList {
   width: 100%;
   list-style:none outside none;
   background-color:#FFFFFF;
   padding: 0;
   color:#3E3E3E;
}

.feedEkList li {
  margin-bottom: 3em;
}

.feedEkList .itemContent {
  font-family: "Ubuntu", sans-serif;
}

ul {
  list-style: none;
}

footer {
  font-family: "Ubuntu", sans-serif;
  position: relative;
  bottom: 0px;
  height: 60px;
}

/************************************ Mobile CSS ************************************/

/* Media Query @ 860px width*/
@media (max-width: 860px) {

  #homepage .container {
    width: 100%;
  }

  #homepage #right-box {
    float: none;
    position: relative;
    display: block;
    margin: 0;
    width: 100%;
    padding: 0;
  }

  #homepage #right-box h2 {
    text-align: center;
    margin-top: 0.5em;;
    font-size: 2em;
  }

  #homepage #right-box #written-work p {
    font-size: 1.5em;
  }

  #homepage #right-box #written-work {
    width: 90%;
    display: block;
    margin: 0 auto;
  }

  #homepage .item {
    display: block;
    margin: 0 auto;
    margin-bottom: 4em;
    width: 280px;
    height: 280px;
  }

  #homepage #left-box {
    float: none;
    position: relative;
    display: block;
    margin: 0 auto;
    text-align: center;
    width: 100%;
  }

  #homepage #left-box nav ul li {
    display: inline-block;
    padding-right: 0.25em;
    padding-left: 0.25em;
    font-size: 1.5em;
  }

  #homepage #programmer-button, #homepage #journalist-button {
    font-size: 1.5em;
  }

  #homepage #right-box #written-work .for-more {
    font-size: 1em;
    margin-bottom: 1em;
  }

}

